--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,139 @@
+*{
+	box-sizing:border-box;
+}
 
+body {
+    margin: 0;
+    padding: 0;
+    background-color: azure;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.container {
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    border-radius: 50%;
+    border: 15px solid #dde;
+    position: relative;
+    overflow: hidden;
+    transition: 3s;
+}
+
+.container div {
+    height: 50%;
+    width: 200px;
+    position: absolute;
+    clip-path: polygon(100% 0 , 50% 100% , 0 0 );
+    transform: translateX(-50%);
+    transform-origin: bottom;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: rgb(0, 0, 0);
+    left: 135px;
+}
+
+.container .one {
+    background-color: brown;
+    left: 50%; 
+}
+.container .two {
+    background-color: gold;
+    transform: rotate(45deg);
+}
+.container .three {
+    background-color: silver;
+    transform: rotate(90deg);
+}
+.container .four {
+    background-color: green;
+    transform: rotate(135deg);
+}
+.container .five {
+    background-color: rebeccapurple;
+    transform: rotate(180deg);
+}
+.container .six {
+    background-color: yellow;
+    transform: rotate(225deg);
+}
+.container .seven {
+    background-color: red;
+    transform: rotate(270deg);
+}
+.container .eight {
+    background-color: paleturquoise;
+    transform: rotate(315deg);
+}
+
+.arrow-1 {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    margin: -500px auto 100px auto;
+    z-index: 999;
+}
+
+.arrow-1:before,
+.arrow-1:after {
+    content: '';
+    position: absolute;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    border-left: 5px solid #337AB7;
+    border-bottom: 5px solid #337AB7;
+    animation: arrow-1 3s linear infinite;
+}
+
+.arrow-1:after {
+    animation: arrow-1 3s linear infinite -1.5s;
+}
+
+@keyframes arrow-1 {
+    0% {
+        opacity: 0;
+        transform: translate(0, -53px) rotate(-45deg);
+    }
+    10%, 90% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 100;  
+        transform: translate(0, 0) rotate(-45deg);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(0, 53px) rotate(-45deg);
+    }
+}
+
+#spin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    background-color: #dde;
+    text-transform: unset;
+    border: 8px solid #fff;
+    font-weight: bold;
+    font-size: 20px;
+    color: #a2a2a2;
+    width: 80px;
+    height: 80px;
+    font-family: sans-serif;
+    border-radius: 50%;
+    cursor: pointer;
+    outline: none;
+    letter-spacing: 1px;
+}
